--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="redPrimary">#CD0001</color>
     <color name="redSecundary">#9d0808</color>
+    <color name="cinzaIcon">#616161</color>
 </resources>
