--- a/app/src/main/res/drawable/ic_expand_more.xml
+++ b/app/src/main/res/drawable/ic_expand_more.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="24">
   <path
       android:pathData="M16.59,8.59L12,13.17 7.41,8.59 6,10l6,6 6,-6 -1.41,-1.41z"
-      android:fillColor="#FFFFFF"/>
+      android:fillColor="#000000"/>
 </vector>
